--- a/WebTechnology/lab4/website/sources.html
+++ b/WebTechnology/lab4/website/sources.html
@@ -43,7 +43,7 @@
       >
         <li style="float: left">
           <a
-            href="index.html"
+            href="/"
             style="
               display: block;
               color: white;
