--- a/WebTechnology/lab4/website/html5.html
+++ b/WebTechnology/lab4/website/html5.html
@@ -121,7 +121,7 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Главная</a></li>
+        <li><a href="/">Главная</a></li>
         <li><a href="html5.html">HTML5 версия</a></li>
         <li><a href="sources.html">Использованные источники</a></li>
       </ul>
